--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jszip": "^3.6.0",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
+    "web-ext": "^6.2.0",
     "webpack": "^5.38.1"
   },
   "devDependencies": {
